# wikibot

./: LICENSE  README.md  pyproject.toml  run.sh  techstack.md  techstack.yml
bot/: bot.py
