[tool.poetry]
name = "wikibot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymediawiki = "^0.7.4"
python-dotenv = "^1.0.1"
urllib3 = "^2.2.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


